--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ will-change: transform;
 }
 a{
     margin-top: 5px;
-    font-family: 'Ageo Regular', sans-serif;
+    font-family: 'Poppins', sans-serif;
     color: #bdbdbd;
     font-size: 37px;
     line-height: 40px;
@@ -80,7 +80,7 @@ a{
 }
 .text-ani{
     width: 30vw;
-    font-family: 'Ageo Regular', sans-serif;
+    font-family: 'Poppins', sans-serif;
     color: #fff;
     font-size: 3vw;
     line-height: 3.5vw;
@@ -118,7 +118,7 @@ a{
 }
 .image_text{
     z-index: 0;
-    font-family: Didot, sans-serif;
+    font-family: "Poppins", sans-serif;
     color: hsla(0, 0%, 100%, 0.1);
     font-size: 18vw;
     line-height: 180px;
@@ -128,22 +128,7 @@ img{
     vertical-align: middle;
     display: inline-block;
 }
-.image_front{
-    width: 150px;
-    position: absolute;
-    z-index: 2;
-    display: block;
-    opacity: 0;
-    transform: translateY(70px);
-    transition: opacity 0.5s ease, transform 0.7s ease;
-}
 
-.image_back {
-    width: 150px;
-    position: absolute;
-    z-index: 2;
-    display: none;
-}
 .icon{
     position: absolute;
     z-index: 999;
@@ -154,7 +139,7 @@ img{
 .sub-title{
     margin-top: 20px;
     margin-bottom: 10px;
-    font-family: Didot, sans-serif;
+    font-family: 'Poppins', sans-serif;
     color: #fff;
     font-size: 20px;
     line-height: 36px;
@@ -162,7 +147,7 @@ img{
 }
 .text-ani{
     width: 30vw;
-    font-family: 'Ageo Regular', sans-serif;
+    font-family: 'Poppins', sans-serif;
     color: #fff;
     font-size: 3vw;
     line-height: 3.5vw;
@@ -172,7 +157,7 @@ img{
 }
 .text-ani2 {
     width: 30vw;
-    font-family: 'Ageo Regular', sans-serif;
+    font-family: 'Poppins', sans-serif;
     color: #fff;
     font-size: 3vw;
     line-height: 3.5vw;
@@ -205,50 +190,162 @@ img{
     transform: translateY(0);
     /* Move to the initial position */
 }
-
-
-.text-ani.animate span:nth-child(1) {
-    transition-delay: 0.1s;
-    /* Add a slight delay for the first span */
+.image_front {
+    width: 150px;
+    position: absolute;
+    z-index: 2;
+    display: block;
+    opacity: 0;
+    transform-origin: bottom center;
+    transform: translateY(70px);
+    transition: opacity 0.5s ease, transform 0.7s ease;
 }
 
-.text-ani.animate span:nth-child(2) {
-    transition-delay: 0.2s;
-    /* Add a slight delay for the second span */
-}
-.text-ani.animate *:nth-child(3) {
-    transition-delay: 0.3s;
-    /* Add a slight delay for the second span */
-}
-.text-ani.animate *:nth-child(4) {
-  transition-delay: 0.4s; /* Add a slight delay for the second span */
+.image_back {
+    width: 150px;
+    position: absolute;
+    z-index: 2;
+    display: block;
+    opacity:0 ;
+    transform-origin: bottom center;
 }
 
-.text-ani.animate *:nth-child(5) {
-  transition-delay: 0.5s; /* Add a slight delay for the second span */
+.image_back.bottleIn {
+    animation: rightToLeft 0.5s ease forwards;
 }
 
-.text-ani.animate *:nth-child(6) {
-  transition-delay: 0.6s; /* Add a slight delay for the second span */
+.image_front.bottleOut {
+    animation: leftToRight 0.5s ease forwards;
 }
 
-.text-ani.animate *:nth-child(7) {
-    transition-delay: 0.7s;
-    /* Add a slight delay for the second span */
+@keyframes leftToRight {
+    0% {
+        transform: rotate(5deg);
+        opacity: 1;
+    }
+
+    30% {
+        transform: rotate(20deg);
+    }
+
+    60% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(-50deg);
+        opacity: 0;
+    }
 }
-.text-ani.animate *:nth-child(8) {
-    transition-delay: 0.8s;
-    /* Add a slight delay for the second span */
+@keyframes rightToLeft {
+    0% {
+        transform: rotate(50deg);
+        opacity: 0.3;
+    }
+
+    40% {
+        transform: rotate(20deg);
+        opacity: 0.6;
+    }
+
+    70% {
+        transform: rotate(-10deg);
+        opacity: 0.8;
+    }
+
+    100% {
+        transform: rotate(0deg);
+        opacity: 1;
+    }
 }
-.text-ani.animate *:nth-child(9) {
-    transition-delay: 0.9s;
-    /* Add a slight delay for the second span */
-}
-.text-ani.animate *:nth-child(10) {
-    transition-delay: 0.10s;
-    /* Add a slight delay for the second span */
-}
-.text-ani.animate *:nth-child(11) {
-    transition-delay: 0.11s;
-    /* Add a slight delay for the second span */
-}
+
+   .menu-btn-5 {
+        position: fixed;
+        left: auto;
+        top: 0%;
+        right: 0%;
+        bottom: auto;
+        z-index: 999;
+        width: 30px;
+        height: 30px;
+        margin-top: 80px;
+        margin-right: 60px;
+        cursor: pointer;
+   }
+
+ .menu-btn-5 span:nth-child(1),
+ .menu-btn-5 span:nth-child(1)::after {
+     background: #fff;
+     content: '';
+     position: absolute;
+     width: 30px;
+     height: 2px;
+     margin-top: 13px;
+     -webkit-transition: .3s ease-in-out;
+     -moz-transition: .3s ease-in-out;
+     -o-transition: .3s ease-in-out;
+     transition: .3s ease-in-out;
+ }
+
+ .menu-btn-5 span:nth-child(1)::before {
+     margin-top: -12px;
+
+     -webkit-transition: .3s ease-in-out .3s;
+     -moz-transition: .3s ease-in-out .3s;
+     -o-transition: .3s ease-in-out .3s;
+     transition: .3s ease-in-out .3s;
+ }
+
+ .menu-btn-5 span:nth-child(1)::after {
+     margin-top: 12px;
+
+     -webkit-transition: .3s ease-in-out .3s;
+     -moz-transition: .3s ease-in-out .3s;
+     -o-transition: .3s ease-in-out .3s;
+     transition: .3s ease-in-out .3s;
+ }
+
+ .menu-btn-5 span:nth-child(2) {
+    background: #fff;
+     content: '';
+     position: absolute;
+     width: 0px;
+     height: 2px;
+     margin-top: 13px;
+
+     -webkit-transform: rotate(-45deg);
+     -moz-transform: rotate(-45deg);
+     -o-transform: rotate(-45deg);
+     transform: rotate(-45deg);
+
+     -webkit-transition: .3s ease-in-out;
+     -moz-transition: .3s ease-in-out;
+     -o-transition: .3s ease-in-out;
+     transition: .3s ease-in-out;
+ }
+
+ .menu-btn-5.active span:nth-child(1)::before,
+ .menu-btn-5.active span:nth-child(1)::after {
+     margin-top: 0;
+ }
+
+ .menu-btn-5.active span:nth-child(1) {
+     -webkit-transition: .5s ease-in-out .6s;
+     -moz-transition: .5s ease-in-out .6s;
+     -o-transition: .5s ease-in-out .6s;
+     transition: .5s ease-in-out .5s;
+
+     -webkit-transform: rotate(45deg);
+     -moz-transform: rotate(45deg);
+     -o-transform: rotate(45deg);
+     transform: rotate(45deg);
+ }
+
+ .menu-btn-5.active span:nth-child(2) {
+     width: 30px;
+
+     -webkit-transition: .3s ease-in-out .8s;
+     -moz-transition: .3s ease-in-out .8s;
+     -o-transition: .3s ease-in-out .8s;
+     transition: .3s ease-in-out .8s;
+ }
