--- a/styles.css
+++ b/styles.css
@@ -228,7 +228,71 @@ img{
     opacity: 1;
     animation: leftToRight 0.5s ease forwards;
 }
+.slide-in {
+    animation: slideInLeft 0.5s forwards;
+    -webkit-animation: slideInLeft 0.5s forwards;
+}
 
+.slide-out {
+    animation: slideOutRight 0.5s forwards;
+    -webkit-animation: slideOutRight 0.5s forwards;
+}
+
+@keyframes slideInLeft {
+    0% {
+        transform: translateX(-100%);
+        
+    }
+
+    100% {
+        transform:translateX(0%);
+    }
+}
+@keyframes slideOutRight {
+    0% {
+        transform: translateX(0%);
+
+    }
+
+    100% {
+        transform: translateX(-100%);
+    }
+}
+@keyframes slideLeftInLeft {
+    0% {
+        transform: translate3D(100%,-200vh,0);
+
+    }
+
+    100% {
+        transform: translate3D(0%,
+            -200vh,
+            0);
+    }
+}
+.slide-in-right {
+    animation: slideLeftInLeft 0.5s forwards;
+    -webkit-animation: slideLeftInLeft 0.5s forwards;
+}
+
+.slide-out-right {
+    animation: slideLLeftOutRight 0.5s forwards;
+    -webkit-animation: slideLLeftOutRight 0.5s forwards;
+}
+@keyframes slideLLeftOutRight {
+    0% {
+        transform: translate3D(0%,
+            -200vh,
+            0);
+
+    }
+
+    100% {
+        transform: translate3D(100%,
+            -200vh,
+            0);
+    }
+}
 @keyframes leftToRight {
     0% {
         transform: rotate(5deg);
@@ -292,19 +356,19 @@ img{
      width: 30px;
      height: 2px;
      margin-top: 13px;
-     -webkit-transition: .3s ease-in-out;
-     -moz-transition: .3s ease-in-out;
-     -o-transition: .3s ease-in-out;
-     transition: .3s ease-in-out;
+     -webkit-transition: .1s ease-in-out;
+     -moz-transition: .1s ease-in-out;
+     -o-transition: .1s ease-in-out;
+     transition: .1s ease-in-out;
  }
 
 
  .menu-btn-5 span:nth-child(1)::after {
      margin-top: 12px;
-     -webkit-transition: .3s ease-in-out .3s;
-     -moz-transition: .3s ease-in-out .3s;
-     -o-transition: .3s ease-in-out .3s;
-     transition: .3s ease-in-out .3s;
+     -webkit-transition: .1s ease-in-out .1s;
+     -moz-transition: .1s ease-in-out .1s;
+     -o-transition: .1s ease-in-out .1s;
+     transition: .1s ease-in-out .1s;
  }
 
  .menu-btn-5 span:nth-child(2) {
@@ -318,10 +382,10 @@ img{
      -moz-transform: rotate(-45deg);
      -o-transform: rotate(-45deg);
      transform: rotate(-45deg);
-     -webkit-transition: .3s ease-in-out;
-     -moz-transition: .3s ease-in-out;
-     -o-transition: .3s ease-in-out;
-     transition: .3s ease-in-out;
+     -webkit-transition: .1s ease-in-out;
+     -moz-transition: .1s ease-in-out;
+     -o-transition: .1s ease-in-out;
+     transition: .1s ease-in-out;
  }
 
 
@@ -331,10 +395,10 @@ img{
  }
 
  .menu-btn-5.active span:nth-child(1) {
-     -webkit-transition: .5s ease-in-out .6s;
-     -moz-transition: .5s ease-in-out .6s;
-     -o-transition: .5s ease-in-out .6s;
-     transition: .5s ease-in-out .5s;
+     -webkit-transition: .2s ease-in-out .2s;
+     -moz-transition: .2s ease-in-out .2s;
+     -o-transition: .2s ease-in-out .2s;
+     transition: .2s ease-in-out .2s;
      background: #000 !important;
      -webkit-transform: rotate(45deg);
      -moz-transform: rotate(45deg);
@@ -346,8 +410,107 @@ img{
  .menu-btn-5.active span:nth-child(2) {
      width: 30px;
     background: #000;
-     -webkit-transition: .3s ease-in-out .8s;
-     -moz-transition: .3s ease-in-out .8s;
-     -o-transition: .3s ease-in-out .8s;
-     transition: .3s ease-in-out .8s;
+     -webkit-transition: .1s ease-in-out .2s;
+     -moz-transition: .1s ease-in-out .2s;
+     -o-transition: .1s ease-in-out .2s;
+     transition: .2 ease-in-out .2s;
+ }
+.menu{
+    position: fixed;
+    z-index: 0;
+    width: 100%;
+    height: 100vh;
+    -webkit-perspective: 2000px;
+    perspective: 2000px;
+    -webkit-perspective-origin: 50% 100%;
+    perspective-origin: 50% 100%;
+}
+.menu-child{
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    background-color: #fff;
+    }
+    .menu-col{
+        position: relative;
+        height: 100%;
+        -webkit-box-flex: 1;
+        -webkit-flex: 1;
+        -ms-flex: 1;
+        flex: 1;
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        flex-direction: column;
+        
+    }
+    .menu-grand-child{
+            display: -webkit-box;
+                display: -webkit-flex;
+                display: -ms-flexbox;
+                display: flex;
+                width: 70%;
+                height: 60%;
+    }
+    .w-list-unstyled{
+        padding-left: 0;
+        list-style: none;
+        height:100%;
+        width: 100%;
+    }
+    .w-list-unstyled li{
+            display: -webkit-box;
+                display: -webkit-flex;
+                display: -ms-flexbox;
+                display: flex;
+                height: 20%;
+                -webkit-box-align: center;
+                -webkit-align-items: center;
+                -ms-flex-align: center;
+                align-items: center;
+                border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    }
+ @media only screen and (max-width: 782px) {
+    .image_front {
+            width: 86px;
+        }
+    
+        .image_back {
+            width: 86px;
+        }
+        .icon {
+            width: 11%;
+            margin-top: 30px;
+            margin-left: 30px;
+        }
+    .menu-btn-5 {
+        margin-top: 45px;
+        margin-right: 30px;
+    }
+        .details{
+            padding-left: 20px;
+        }
+        .hide{
+            display: none;
+        }
+        .menu-grand-child{
+            height: 60%;
+            margin-top: -160px;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+            -webkit-flex-direction: column;
+            -ms-flex-direction: column;
+            flex-direction: column;
+        }
  }
